# onitama

./: README.md  pyproject.toml
api/: main.py
static/: firefly.css  logic.js  style.css
templates/: base.html  firefly.html  homepage.html  login.html
