[tool.poetry]
name = "Onitama"
version = "0.0.0"
description = "Onitama game"
authors = ["Freddy Wordingham <freddy@digilab.co.uk>"]

[tool.poetry.dependencies]
fastapi = "^0.92.0"
jinja2 = "^3.1.2"
python = ">=3.8,<3.12"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
